added notes & user api
