# router/notes.js
@@ -13,4 +13,13 @@ router.get("/allnotes", notes.allnotes);
 // get specific note
 router.get("/:id", notes.specificnote);
 
+// update note 
+router.patch('/update/:id', notes.updatenote);
+
+//delete note
+router.patch('/delete/:id', notes.deletenote);
+
+//archive note
+router.patch('/archive/:id', notes.archivenote);
+
 module.exports = router;
